<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
 	android:orientation="vertical">
    <TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
 		android:text="@string/infoSaveReport"
 		android:layout_marginLeft="5dp"
 		android:layout_marginRight="5dp">
	</TextView>
    <LinearLayout
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
		android:orientation="vertical">
		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="@string/labelTypeOfActivities">
		</TextView>
		<Spinner 
		    android:id="@+id/SpinnerTypeOfActivities"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="@string/labelNameOfProject">
		</TextView>
		<EditText 
		    android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:id="@+id/edNameOfProject"/>
	</LinearLayout>	
	<LinearLayout
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
		android:orientation="vertical">
		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center"
 			android:text="@string/labelInfoOfProject">
		</TextView>
		<EditText 
		    android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:lines="2" 
 			android:id="@+id/edInfo"/>
	</LinearLayout>	
	<LinearLayout
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="@string/labelTime">
		</TextView>
		<EditText 
		    android:layout_width="fill_parent"
 			android:layout_height="wrap_content"
 			android:id="@+id/edTime"/>
	</LinearLayout>	    	    
    <LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="right">
		<Button
 			android:id="@+id/btnSaveReport"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="@string/labelBtnSaveReport"
			android:onClick="btnSaveReportClickHandler">
		</Button>
	</LinearLayout>
</LinearLayout>