<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content">
		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="@string/labelLogin"
 			android:layout_marginLeft="5dp"
 			android:layout_marginRight="5dp">
		</TextView>
		<EditText
			android:id="@+id/etLoginReg"
			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_weight="1">
			<requestFocus>
			</requestFocus>
		</EditText>
	</LinearLayout>
	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content">
		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
			android:text="@string/labelPassword"
 			android:layout_marginLeft="5dp"
 			android:layout_marginRight="5dp">
		</TextView>
		<EditText
 			android:id="@+id/etPasswordReg"
 			android:password="true"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_weight="1">
		</EditText>
	</LinearLayout>
	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content">
		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
			android:text="@string/labelRepeatPassword"
 			android:layout_marginLeft="5dp"
 			android:layout_marginRight="5dp">
		</TextView>
		<EditText
 			android:id="@+id/etRepeatPasswordReg"
 			android:password="true"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_weight="1">
		</EditText>
	</LinearLayout>
	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
		android:gravity="right">
		<Button
 			android:id="@+id/btnRegistration"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="@string/labelBtnRegistration"
			android:onClick="btnRegistrationClickHandler">
		</Button>
	</LinearLayout>
</LinearLayout>