<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
 	android:orientation="vertical">
	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content">
		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="@string/labelLogin"
 			android:layout_marginLeft="5dp"
 			android:layout_marginRight="5dp">
		</TextView>
		<EditText
			android:id="@+id/etLogin"
			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_weight="1">
			<requestFocus>
			</requestFocus>
		</EditText>
	</LinearLayout>
	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content">
		<TextView
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
			android:text="@string/labelPassword"
 			android:layout_marginLeft="5dp"
 			android:layout_marginRight="5dp">
		</TextView>
		<EditText
 			android:id="@+id/etPassword"
 			android:password="true"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_weight="1">
		</EditText>
	</LinearLayout>
	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
		android:gravity="right">
		<Button
 			android:id="@+id/btnLogin"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="@string/labelBtnLogin"
			android:onClick="btnLoginClickHandler">
		</Button>
	</LinearLayout>
	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content" >
		<Button
 			android:id="@+id/btnRead"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:text="Read data from DB to LOG"
			android:onClick="btnReadClickHandler">
		</Button>
	</LinearLayout>
</LinearLayout>